--- a/leopardSpot/client/templates/views/intro.html
+++ b/leopardSpot/client/templates/views/intro.html
@@ -1,1 +1,20 @@
-intro.html
+<template name="intro">
+ <!-- background with three boxes -->
+ <div class="ui three column grid">
+   <div class="column">
+     <div class="ui segment">
+       <img src="/images/avatar/large/elliot.jpg" class="ui fluid image">
+     </div>
+   </div>
+   <div class="column">
+     <div class="ui segment">
+       <img src="/images/avatar/large/matt.jpg" class="ui fluid image">
+     </div>
+   </div>
+   <div class="column">
+     <div class="ui segment">
+       <img src="/images/avatar/large/jenny.jpg" class="ui fluid image">
+     </div>
+   </div>
+
+</template>
