--- a/leopardSpot/client/templates/views/make_presentation.html
+++ b/leopardSpot/client/templates/views/make_presentation.html
@@ -1,17 +1,23 @@
-<template name="login">
+<template name="makePresentation">
 
- <div class="ui large form segment">
-   <div class="two fields">
-     <div class="field">
-       <label>Username</label>
-       <input placeholder="Usename" type="text">
-     </div>
-     <div class="field">
-       <label>Password</label>
-       <input placeholder="Password" type="password">
-     </div>
-   </div>
-   <div class="ui submit button">Submit</div>
- </div>
+  <div class="ui large segment">
+    <a class="ui ribbon label">Your Presentation</a>
+  </div>
+
+  <div class="ui steps">
+    <a class="step">
+      <div class="content">
+        <div class="title">Save Presentation</div>
+      </div>
+    </a>
+    <a class="active step">
+      <div class="content">
+        <div class="title">New Presentation</div>
+      </div>
+     </a>
+  </div>
+
+
+
 
 </template>
