edits to client

--- a/leopardSpot/client/templates/views/intro.html
+++ b/leopardSpot/client/templates/views/intro.html
@@ -1,20 +1,38 @@
 <template name="intro">
  <!-- background with three boxes -->
- <div class="ui three column grid">
-   <div class="column">
-     <div class="ui segment">
-       <img src="/images/avatar/large/elliot.jpg" class="ui fluid image">
-     </div>
-   </div>
-   <div class="column">
-     <div class="ui segment">
-       <img src="/images/avatar/large/matt.jpg" class="ui fluid image">
-     </div>
-   </div>
-   <div class="column">
-     <div class="ui segment">
-       <img src="/images/avatar/large/jenny.jpg" class="ui fluid image">
-     </div>
-   </div>
+  <div class="ui large segment">
+    <div class="ui three column grid">
+      <div class="column">
+        <div class="ui segment pictureBox">
+          <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTaFdNtoRAszxfZMiZtbGMpOFJI5N1hBj1LcKkW17EaAJOV7dJg" class="ui fluid image">
+          <h3>Save your presentations in the cloud</h3>
+        </div>
+      </div>
+      <div class="column">
+        <div class="ui segment pictureBox">
+          <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRZddbpzkjPgsMYpwFmORlKDs5fEBOz_wNPHCnNeQ7xOdyLhdwYFUmJ4sec" class="ui fluid image">
+          <h3> Get Realtime Feedback</h3>
+        </div>
+      </div>
+      <div class="column">
+        <div class="ui segment pictureBox">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwFURbPMOqBMMWP1B8Rp8J2owQ0wfcAQxrwKNLyONAXZ55TnBz" class="ui fluid image">
+          <h3>Make fun and interactive presentations</h3>
+        </div>
+      </div>
+    </div>
+    <div class="ui steps">
+      <a class="step">
+        <div class="content">
+          <div class="title">View Saved Presentations</div>
+        </div>
+      </a>
+      <a class="active step">
+        <div class="content">
+          <div class="title"> Make New Presentation</div>
+        </div>
+      </a>
+    </div>
+  </div>
 
 </template>
