completed first draft of layouts/templating

--- a/leopardSpot/client/templates/views/make_presentation.html
+++ b/leopardSpot/client/templates/views/make_presentation.html
@@ -14,7 +14,12 @@
       <div class="content">
         <div class="title">New Presentation</div>
       </div>
-     </a>
+    </a>
+     <a class="step">
+      <div class="content">
+        <div class="title">Presentation Mode</div>
+      </div>
+    </a>
   </div>
 
 
