--- a/leopardSpot/client/templates/includes/header.html
+++ b/leopardSpot/client/templates/includes/header.html
@@ -1,19 +1,21 @@
 <template name="header"> <!-- this includes navBar --> 
   <div class="ui large inverted menu">
     <div class="left menu">
-      <a class="active item"> <!--to do, add route to home activeRouteClass i.e.  <li class="{{activeRouteClass 'home' 'newPosts'}}" and  href="{{pathFor 'newPosts'}}"> -->
+      <a class="active item" href="{{pathFor 'intro'}}"> <!--to do, add route to home activeRouteClass i.e.  <li class="{{activeRouteClass 'home' 'newPosts'}}" and  href="{{pathFor 'newPosts'}}"> -->
         <i class="home icon"></i> Home
       </a>
     </div>
     <div class="right menu">
-      <a class="item">
-        <i class="sign in icon"></i> Log In <!--To do: make disappear if a user is signer in-->
-      </a>
+<!--       <a class="item" href="{{pathFor 'login'}}">
+        <i class="sign in icon"></i> Log In To do: make disappear if a user is signer in
+      </a> -->
+      {{#if currentUser}}
       <a class="item">
         <i class="sign out icon"></i> Log Out <!--To do: make appear if a user is signer in-->
       </a>
-      <a class="item">
-        <i class="user icon"></i> Sign Up
+      {{/if}}
+      <a class="item" href="{{pathFor 'signup'}}">
+        <i class="user icon"></i> Sign Up / Log-In
       </a>
     </div>
   </div>
