--- a/leopardSpot/client/templates/views/sign_up.html
+++ b/leopardSpot/client/templates/views/sign_up.html
@@ -1,9 +1,10 @@
 <template name="signup">
 
   <div class="ui large form segment signup">
-     <div class="field">
+<!--      <div class="field">
        <label>Name</label>
        <input placeholder="First and Last Name" type="text">
+     </div>
      <div class="field">
        <label>Email</label>
        <input placeholder="Email" type="email">
@@ -16,7 +17,8 @@
         <label>Password</label>
         <input placeholder="Password" type="password">
       </div>
-    <div class="ui submit button">Submit</div>
+    <div class="ui submit button">Submit</div> -->
+    {{> atForm}}
   </div>
 
 </template>
