--- a/leopardSpot/client/templates/views/intro.html
+++ b/leopardSpot/client/templates/views/intro.html
@@ -27,7 +27,7 @@
           <div class="title">View Saved Presentations</div>
         </div>
       </a>
-      <a class="active step" href="{{pathFor 'presentationView'}}">
+      <a class="active step" href="{{pathFor 'makePresentation'}}">
         <div class="content">
           <div class="title"> Make New Presentation</div>
         </div>
