[done]created new routing path for 'savedPresentations' (/list)

--- a/leopardSpot/client/templates/views/intro.html
+++ b/leopardSpot/client/templates/views/intro.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="ui steps">
-      <a class="step">
+      <a class="step" href="{{pathFor 'savedPresentations'}}">
         <div class="content">
           <div class="title">View Saved Presentations</div>
         </div>
