--- a/leopardSpot/client/templates/app/presentation_view.html
+++ b/leopardSpot/client/templates/app/presentation_view.html
@@ -1,4 +1,4 @@
-<template name="presentationView">
+<template name="presentationMode">
   <div class="container jumbotron"> <!-- ToDo: This will contian entire presentation -->
 
   </div>
