--- a/leopardSpot/client/templates/views/make_presentation.html
+++ b/leopardSpot/client/templates/views/make_presentation.html
@@ -1,8 +1,8 @@
-<template name="makePresentation">
+<template name="presentationView">
 
   <div class="ui large segment textEditor">
     <a class="ui ribbon label">Your Presentation</a>
-    <textarea  placeholder="Type slide markdown here, separating slides with an. For an online markdown editor, use http://dillinger.io/"></textarea>
+    <textarea  class="textEditor" placeholder="Type slide markdown here, separating slides with an. For an online markdown editor, use http://dillinger.io/"></textarea>
 
   </div>
 
