--- a/leopardSpot/client/templates/includes/header.html
+++ b/leopardSpot/client/templates/includes/header.html
@@ -1,17 +1,15 @@
 <template name="header"> <!-- this includes navBar --> 
-  <div class="ui large inverted menu">
+  <div class="ui large inverted menu header">
     <div class="left menu">
-      <a class="active item" href="{{pathFor 'intro'}}"> <!--to do, add route to home activeRouteClass i.e.  <li class="{{activeRouteClass 'home' 'newPosts'}}" and  href="{{pathFor 'newPosts'}}"> -->
+      <a class="active item" href="{{pathFor 'intro'}}"> 
         <i class="home icon"></i> Home
       </a>
     </div>
     <div class="right menu">
-<!--       <a class="item" href="{{pathFor 'login'}}">
-        <i class="sign in icon"></i> Log In To do: make disappear if a user is signer in
-      </a> -->
+
       {{#if currentUser}}
       <a class="item">
-        <i class="sign out icon"></i> Log Out <!--To do: make appear if a user is signer in-->
+        <i class="sign out icon"></i> Log Out
       </a>
       {{/if}}
       <a class="item" href="{{pathFor 'signup'}}">
