edited client with text area

--- a/leopardSpot/client/templates/views/make_presentation.html
+++ b/leopardSpot/client/templates/views/make_presentation.html
@@ -1,4 +1,4 @@
-<template name="presentationView">
+<template name="makePresentation">
 
   <div class="ui large segment textEditor">
     <a class="ui ribbon label">Your Presentation</a>
