--- a/leopardSpot/client/templates/app/layout.html
+++ b/leopardSpot/client/templates/app/layout.html
@@ -1,5 +1,6 @@
 <template name="layout">
-  <div class="container jumbotron"> <!-- ToDo: customize jumbotron css -->
+  <div class="container jumbotron">
+
     {{> header}}
     <!-- {{> errors}} Directs to errors- would need to make an errors collection -->
     <div id="main" > <!-- Todo: reconfigure bootstrap: class = class="row-fluid" -->
