--- a/leopardSpot/client/templates/includes/header.html
+++ b/leopardSpot/client/templates/includes/header.html
@@ -8,13 +8,16 @@
     <div class="right menu leopardNav">
 
       {{#if currentUser}}
-      <a class="item leopardNav">
-        <i class="sign out icon"></i> Log Out
-      </a>
-      {{/if}}
+      <div  id="logout">
+        <a class="item leopardNav">
+          <i class="sign out icon"></i> Log Out
+        </a>
+      </div>
+      {{else}}
       <a class="item leopardNav" href="{{pathFor 'signup'}}">
         <i class="user icon"></i> Sign Up / Log-In
       </a>
+      {{/if}}
     </div>
   </div>
 </template>
