styling of intro page

--- a/leopardSpot/client/templates/views/intro.html
+++ b/leopardSpot/client/templates/views/intro.html
@@ -5,7 +5,7 @@
       <div class="column">
         <div class="ui segment pictureBox">
           <img src="assets/screen.gif" class="ui fluid image">
-          <h3>Make and access your Presentations from anywhere with a connection </h3>
+          <h3>Make and save presentations online </h3>
         </div>
       </div>
       <div class="column">
@@ -21,18 +21,18 @@
         </div>
       </div>
     </div>
-    <div class="ui steps intro">
-      <a class="step" href="{{pathFor 'savedPresentations'}}">
-        <div class="content">
-          <div class="title">View Saved Presentations</div>
-        </div>
-      </a>
-      <a class="active step" href="{{pathFor 'makePresentation'}}">
-        <div class="content">
-          <div class="title"> Make New Presentation</div>
-        </div>
-      </a>
-    </div>
+  </div>
+  <div class="ui steps intro">
+    <a class="step" href="{{pathFor 'savedPresentations'}}">
+      <div class="content">
+        <div class="title">View Saved Presentations</div>
+      </div>
+    </a>
+    <a class="active step" href="{{pathFor 'makePresentation'}}">
+      <div class="content">
+        <div class="title"> Make New Presentation</div>
+      </div>
+    </a>
   </div>
 
 </template>
