--- a/leopardSpot/client/templates/app/layout.html
+++ b/leopardSpot/client/templates/app/layout.html
@@ -1,4 +1,5 @@
 <template name="layout">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <div class="container jumbotron">
 
     {{> header}}
