--- a/leopardSpot/client/templates/views/make_presentation.html
+++ b/leopardSpot/client/templates/views/make_presentation.html
@@ -1,32 +1,34 @@
 <template name="makePresentation">
 
-  <div class="ui large segment textEditor">
-    <a class="ui ribbon label">Your Presentation</a>
 
-    <textarea  class="textEditor" placeholder="Type slide markdown here, separating slides with an. For an online markdown editor, use http://dillinger.io/"></textarea>
+  <form id="mdRawForm">
+    <div class="ui form large segment textEditor">
 
-
-  </div>
-
-  <div class="segment presentationCommands">
-    <div class="ui steps presentationCommands">
-      <a class="step">
-        <div class="content">
-          <div class="title">Save Presentation</div>
-        </div>
-      </a>
-      <a class="active step">
-        <div class="content">
-          <div class="title">New Presentation</div>
-        </div>
-      </a>
-       <a class="step">
-        <div class="content">
-          <div class="title">Presentation Mode</div>
-        </div>
-      </a>
+      <textarea id="mdRawTextArea" class="textEditor" placeholder="Type slide markdown here, separating slides with * * *. For an online markdown editor, use http://dillinger.io/"></textarea>
+      <button class="ui button" type="submit" value="submit">Create!</button>
     </div>
-  </div>
+
+    <div class="segment presentationCommands">
+      <div class="ui steps presentationCommands">
+        <a class="step">
+          <div class="content">
+            <div class="title">Save Presentation</div>
+          </div>
+        </a>
+        <a class="active step">
+          <div class="content">
+            <div class="title">New Presentation</div>
+          </div>
+        </a>
+         <!-- <a class="step">
+          <div class="content">
+            <div id="createBtn" class="title">Create!</div>
+          </div>
+        </a> -->
+      </div>
+    </div>
+  </form>
+
 
 
 
