--- a/leopardSpot/client/templates/includes/header.html
+++ b/leopardSpot/client/templates/includes/header.html
@@ -5,11 +5,11 @@
         <i class="home icon"></i> Home
       </a>
     </div>
-    <!-- <div class="menu leopardNav">
+    <div class="menu leopardNav">
       <a class="item leopardNav" href="{{pathFor 'intro'}}"> 
          LeopardSpot
       </a>
-    </div> -->
+    </div>
     <div class="right menu leopardNav">
 
       {{#if currentUser}}
