(integration) presentation component works now

--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -6,12 +6,12 @@
     }
   </style>
   <div id="counter" class="ui huge label">
-    {{index}}/{{slideLength}}
+    {{_page}}/{{slideLength}}
   </div>
   <div class="slide">
     
   {{#markdown}}
-  {{mk index}}
+  {{mk _page}}
   {{/markdown}}
   </div>
   
