--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -4,6 +4,18 @@
     .slide{
       opacity: {{opacity}};
     }
+    .ui.button.stopwatch{
+        display: inline-block;
+        border-radius: 5px;
+        opacity: 80;
+        padding: 8px;
+        margin: 15px;
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        width: 120px;
+        height: 30px;
+    }
   </style>
   <div id="counter" class="ui huge label">
     {{_page}}/{{slideLength}}
@@ -17,5 +29,8 @@
   
   <div class="ui button" id="prev">prev</div>
   <div class="ui button" id="next">next</div>
-
+  <div class="ui button stopwatch">
+    <i class="wait icon"></i>
+    <time id="stopwatch">{{ stopwatch }}</time>
+  </div>
 </template>
