--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -1,9 +1,9 @@
 <template name="slides">
   
-  <style type="text/css">
+  <style type="text/css"> 
     .slide{
-      opacity: {{opacity}};
-    }
+      opacity: {{opacity}}; 
+    } /*property is here for transitions */
   </style>
   <div id="counter" class="ui huge label">
     {{_page}}/{{slideLength}}
