[done] basic timer formatting

--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -15,7 +15,7 @@
         position: fixed;
         bottom: 0;
         right: 0;
-        width: 120px;
+        width: 220px;
         height: 30px;
     }
   </style>
@@ -36,7 +36,8 @@
   </div>
   
   <div class="ui button stopwatch">
-    <i class="wait icon"></i>
+    <i class="wait icon"></i><strong>
     <time id="stopwatch">{{ stopwatch }}</time>
+  </strong>
   </div>
 </template>
