--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -13,7 +13,7 @@
         position: fixed;
         bottom: 0;
         right: 0;
-        width: 120px;
+        width: 220px;
         height: 30px;
     }
   </style>
@@ -30,7 +30,8 @@
   <div class="ui button" id="prev">prev</div>
   <div class="ui button" id="next">next</div>
   <div class="ui button stopwatch">
-    <i class="wait icon"></i>
+    <i class="wait icon"></i><strong>
     <time id="stopwatch">{{ stopwatch }}</time>
+  </strong>
   </div>
 </template>
