minor design tweaks

--- a/leopardSpot/client/templates/includes/access_denied.html
+++ b/leopardSpot/client/templates/includes/access_denied.html
@@ -1,5 +1,5 @@
 <template name="accessDenied">
-  <div class="access-denied jumbotron"> <!-- reconfig for semantic -->
+  <div class="access-denied jumbotron"> <!-- requires a router for sessions -->
     <h2>Access Denied</h2>
     <p>You can't get here! Please log in.</p>
   </div>
