--- a/leopardSpot/client/templates/views/intro.html
+++ b/leopardSpot/client/templates/views/intro.html
@@ -5,13 +5,13 @@
       <div class="column">
         <div class="ui segment pictureBox">
           <img src="assets/screen.gif" class="ui fluid image">
-          <h3>Make and save presentations online </h3>
+          <h3>Make and save simple markup presentations online </h3>
         </div>
       </div>
       <div class="column">
         <div class="ui segment pictureBox">
           <img src="assets/poll.gif" class="ui fluid image">
-          <h3> Get realtime feedback from your audience</h3>
+          <h3> Get realtime feedback from your audience through polling</h3>
         </div>
       </div>
       <div class="column">
@@ -23,12 +23,12 @@
     </div>
   </div>
   <div class="ui steps intro">
-    <a class="step" href="{{pathFor 'savedPresentations'}}">
+    <a class="step intro" href="{{pathFor 'savedPresentations'}}">
       <div class="content">
         <div class="title">View Saved Presentations</div>
       </div>
     </a>
-    <a class="active step" href="{{pathFor 'makePresentation'}}">
+    <a class="step intro" href="{{pathFor 'makePresentation'}}">
       <div class="content">
         <div class="title"> Make New Presentation</div>
       </div>
