--- a/leopardSpot/client/templates/views/make_presentation.html
+++ b/leopardSpot/client/templates/views/make_presentation.html
@@ -5,10 +5,10 @@
     <div class="ui form large segment textEditor">
 
       <textarea id="mdRawTextArea" class="textEditor" placeholder="Type slide markdown here, separating slides with * * *. For an online markdown editor, use http://dillinger.io/"></textarea>
-      <button class="ui button" type="submit" value="submit">Create!</button>
+      <button class="ui button create" type="submit" value="submit">Create!</button>
     </div>
 
-    <div class="segment presentationCommands">
+    <!-- <div class="segment presentationCommands">
       <div class="ui steps presentationCommands">
         <a class="step">
           <div class="content">
@@ -20,8 +20,8 @@
             <div class="title">New Presentation</div>
           </div>
         </a>
-      </div>
-    </div>
+      </div> -->
+ <!--    </div> -->
   </form>
 
 
