--- a/leopardSpot/client/templates/app/not_found.html
+++ b/leopardSpot/client/templates/app/not_found.html
@@ -1,5 +1,5 @@
 <template name="notFound">
-  <div class="not-found jumbotron"> <!-- todo: customize jumbotron to semantic -->
+  <div class="not-found jumbotron"> 
     <h2>404</h2>
     <p>Sorry, we couldn't find a page at this address.</p>
   </div>
