stylesheet fix, remove redundant hard-coded data

--- a/leopardSpot/client/templates/slides/slideLayout.html
+++ b/leopardSpot/client/templates/slides/slideLayout.html
@@ -1,5 +1,5 @@
 <template name="slideLayout">
-  <link rel="stylesheet" type="text/css" href="/themes/redMads.css">
+<!--   <link rel="stylesheet" type="text/css" href="/themes/redMads.css"> -->
   <div class="main">
   {{> yield}}
   </div>
