--- a/leopardSpot/public/main.css
+++ b/leopardSpot/public/main.css
@@ -83,6 +83,7 @@ h2 {
 .ui.large.segment.intro {
   background: none;
   border: none;
+  box-shadow: none;
 }
 .ui.segment.pictureBox {
   height: 80%;
