--- a/leopardSpot/client/templates/views/saved_presentations.html
+++ b/leopardSpot/client/templates/views/saved_presentations.html
@@ -2,8 +2,9 @@
   <div class="ui segment savedPresentations">
     <div class="ui divided list">
       <div class="item">
-        <div class="right floated compact ui button">View</div>
-        <div class="content">
+        <div class="right floated compact ui button">Review Presentation</div>
+        <div class="right floated compact ui button">Begin Presentation</div>
+        <div class="left content">
           <div class="header">Presentation Name 1</div>
         </div>
       </div>
@@ -16,3 +17,6 @@
     </div>
   </div>
 </template>
+
+<!-- add button to start new session. To view, just go to slides/route
+else, do sessions/route -->
