began edits to workflow

--- a/leopardSpot/client/templates/views/saved_presentations.html
+++ b/leopardSpot/client/templates/views/saved_presentations.html
@@ -1,4 +1,4 @@
-<template name="savedPresentations">
+<!-- <template name="savedPresentations">
   <div class="ui segment savedPresentations">
     <div class="ui divided list">
       <div class="item">
@@ -16,7 +16,25 @@
       </div>
     </div>
   </div>
-</template>
+</template> -->
 
 <!-- add button to start new session. To view, just go to slides/route
 else, do sessions/route -->
+
+<template name="savedPresentations">
+  <div class="ui segment savedPresentations">
+    <div class="ui divided list">
+    {{#each decks}}
+      <div class="item">
+        
+        <div class="right floated compact ui button" id="reviewPresentation">Review Presentation</div>
+        <div class="right floated compact ui button" id="startPresentation">Begin Presentation</div>
+        <div class="content">
+          <div class="header"> {{title}}</div>
+        </div>
+        
+      </div>
+      {{/each}}
+    </div>
+  </div>
+</template> 
