--- a/leopardSpot/client/templates/views/make_presentation.html
+++ b/leopardSpot/client/templates/views/make_presentation.html
@@ -8,7 +8,7 @@
         <div class="ui label textEditor">
           Presentation Title
         </div>
-        <input type="text" class="textEditor" placeholder="Enter new title here...">
+        <input type="text" class="textEditor" id="presentationTitle" placeholder="Enter new title here...">
       </div>
 
       <textarea id="mdRawTextArea" class="textEditor" placeholder="Type slide markdown here, separating slides with * * *. For an online markdown editor, use http://dillinger.io/"></textarea>
