[feature] presenter/viewer seperated controller

--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -42,8 +42,10 @@
   {{markDownSource _page}}
   {{/markdown}}
 
+    {{#if isPresentor}}
     <div class="ui button" id="prev">prev</div>
     <div class="ui button" id="next">next</div>
+    {{/if}}
 
   </div>
   
