[fix] routing for access-denied

--- a/leopardSpot/client/templates/views/saved_presentations.html
+++ b/leopardSpot/client/templates/views/saved_presentations.html
@@ -27,10 +27,10 @@ else, do sessions/route -->
     {{#each decks}}
       <div class="item">
         
-        <div class="right floated compact ui button" id="reviewPresentation">Review Presentation</div>
-        <div class="right floated compact ui button" id="startPresentation">Begin Presentation</div>
+        <div class="right floated compact ui button" id="reviewPresentation">Slide Viewer </div>
+        <div class="right floated compact ui button " id="startPresentation"> Begin Presentation</div>
         <div class="content">
-          <div class="header" id="#Title"> {{title}}</div>
+          <div class="header" id="Title"> {{title}}</div>
         </div>
         
       </div>
