--- a/leopardSpot/client/templates/views/intro.html
+++ b/leopardSpot/client/templates/views/intro.html
@@ -5,19 +5,19 @@
       <div class="column">
         <div class="ui segment pictureBox">
           <img src="assets/screen.gif" class="ui fluid image">
-          <h3>Make and save simple markup presentations online </h3>
+          <h3>Make and save decks online </h3>
         </div>
       </div>
       <div class="column">
         <div class="ui segment pictureBox">
           <img src="assets/poll.gif" class="ui fluid image">
-          <h3> Get realtime feedback from your audience through polling</h3>
+          <h3> Get realtime audience feedback</h3>
         </div>
       </div>
       <div class="column">
         <div class="ui segment pictureBox">
           <img src="assets/phone.gif" class="ui fluid image">
-          <h3>Control presentations with the swipe of a finger</h3>
+          <h3>Follow along on your phone</h3>
         </div>
       </div>
     </div>
