--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -30,6 +30,18 @@
         width: 220px;
         height: 30px;
     }
+    .ui.button.reset{
+        display: inline-block;
+        border-radius: 5px;
+        opacity: 80;
+        padding: 8px;
+        margin: 15px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100px;
+        height: 30px;
+    }
   </style>
 
 
@@ -45,13 +57,20 @@
     {{#if isPresentor}}
     <div class="ui button" id="prev">prev</div>
     <div class="ui button" id="next">next</div>
+
+  <div class="ui button reset" id="reset">
+    <i class="wait icon"></i><strong>
+    reset
+  </strong>
+  </div>
+    <div class="ui button stopwatch" id="stopwatch">
+      <i class="wait icon"></i><strong>
+      <time id="stopwatch">{{ stopwatch }}</time>
+    </strong>
+    </div>
     {{/if}}
 
   </div>
   
-  <div class="ui button stopwatch">
-    <i class="wait icon"></i><strong>
-    <time id="stopwatch">{{ stopwatch }}</time>
-  </strong>
-  </div>
+
 </template>
