--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -30,6 +30,18 @@
         width: 220px;
         height: 30px;
     }
+    .ui.button.reset{
+        display: inline-block;
+        border-radius: 5px;
+        opacity: 80;
+        padding: 8px;
+        margin: 15px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100px;
+        height: 30px;
+    }
   </style>
 
 
@@ -51,11 +63,19 @@
       <i class="thumbs up icon"></i>
     </div>
 
-  </div>
-  
-  <div class="ui button stopwatch">
+  <div class="ui button reset" id="reset">
     <i class="wait icon"></i><strong>
-    <time id="stopwatch">{{ stopwatch }}</time>
+    reset
   </strong>
   </div>
+    <div class="ui button stopwatch" id="stopwatch">
+      <i class="wait icon"></i><strong>
+      <time id="stopwatch">{{ stopwatch }}</time>
+    </strong>
+    </div>
+    {{/if}}
+
+  </div>
+  
+
 </template>
