added polling changes

--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -46,6 +46,10 @@
     <div class="ui button" id="prev">prev</div>
     <div class="ui button" id="next">next</div>
     {{/if}}
+    <div class="ui button" id="poll">quickPoll</div>
+    <div class="ui button" id="thumbcheck">
+      <i class="thumbs up icon"></i>
+    </div>
 
   </div>
   
