--- a/leopardSpot/client/templates/slides/slides.html
+++ b/leopardSpot/client/templates/slides/slides.html
@@ -61,6 +61,7 @@
       <div class="ui button" id="next">next</div>
     </div>
     {{/if}}
+    
     <div class="ui button" id="poll">quickPoll</div>
     
     <div class="ui button" id="thumbcheck">
@@ -72,7 +73,7 @@
 
 
   
-
+  {{#if isPresentor}}
   <div class="ui button stopwatch">
     <i class="wait icon"></i><strong>
     reset
